--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Landing page for nature-tours",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass sass/main.scss css/style.css"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/AhmadHJabu/Nature-Tour/issues"
   },
-  "homepage": "https://github.com/AhmadHJabu/Nature-Tour#readme"
+  "homepage": "https://github.com/AhmadHJabu/Nature-Tour#readme",
+  "devDependencies": {
+    "node-sass": "^4.14.1"
+  }
 }
